# swagger/swagger.json
@@ -206,7 +206,70 @@
           }
         }
       }
+    },
+    "/api/QuanLyNguoiDung/capNhatThongTinNguoiDung": {
+      "put": {
+        "summary": "Update user information",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "taiKhoan": {
+                    "type": "string"
+                  },
+                  "email": {
+                    "type": "string"
+                  },
+                  "soDT": {
+                    "type": "string"
+                  },
+                  "matKhau": {
+                    "type": "string"
+                  },
+                  "hoTen": {
+                    "type": "string"
+                  },
+                  "maLoaiNguoiDung": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "taiKhoan",
+                  "email",
+                  "soDT",
+                  "matKhau",
+                  "hoTen",
+                  "maLoaiNguoiDung"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "User information updated successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
+    
     
   }
 }
